# autores-evaluator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ruff.yml
example/: logistc_regression.ipynb
examples/: A+B.ipynb  A_B.ipynb  cnn.ipynb  logistic_regression.ipynb
image/: architecture.drawio
images/: architecture.drawio  image2.drawio
notebook/: 20240205.ipynb  20240305.ipynb  20240318.ipynb  gemini.ipynb  image.ipynb  pip_test.ipynb  test.ipynb  test_lightgbm.ipynb  test_logistic_regression.ipynb  test_nn.ipynb
src/auto-evaluate/: main.py
src/auto-evaluate/dataset/tabledata/titanic/: preprocessing.py
src/auto-evaluate/metrix/: binary_classification.py
src/auto-evaluate/test/: lightgbm.py
src/auto-evaluate/train/: cross_validation.py  train.py
src/autoevaluate/: main.py
src/autoevaluate/metrix/: binary_classification.py
src/autoevaluate/train/: cross_validation.py  model_template.py  optuna.py
src/autoresevaluator/: main.py
src/autoresevaluator/dataset/tabledata/: titanic.py
src/autoresevaluator/metrix/: binary_classification.py  multiclass_classificatio.py
src/autoresevaluator/train/: dataloader.py  dataset.py  exec_model.py  optuna.py
src/autoresevaluator/utils/: codefix.py  load_method.py  log_config.py
src/autoresmaker/prompt_template/cifar10/: cnn_format_template.j2
test/: cnn_model.py  copy_file.py  improve_logistic_regression.py  lightgbm_model.py  logistic_regression.py  template_model.py
